# hmm

./: .gitignore  hmmSparse.cabal
src/Data/: IndexRange.hs
src/Data/Array/Unboxed/: YC.hs
src/Numeric/: HMM.hs
src/Numeric/HMM/: FwdBwd.hs  Generate.hs  Internal.hs  Sparse.hs  Viterbi.hs
src/Numeric/Probability/: Discrete.hs
